deploy/grafana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "grafana"
  labels:
    app: "grafana"
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: "grafana"
        name: "grafana"
        app: "grafana"
    spec:
      containers:
        - name: "grafana"
          image: "grafana/grafana:3.1.0-beta1"
          ports:
            - containerPort: 3000
          imagePullPolicy: "Always"
