deploy/influxdb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "influxdb"
  labels:
    app: "influxdb"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: "influxdb"
        name: "influxdb"
        app: "influxdb"
    spec:
      containers:
        - name: "influxdb"
          image: "influxdb:0.13.0" #"influxdb:0.13.0" 1.0.0-beta2
          ports:
            - containerPort: 8083
            - containerPort: 8086
          imagePullPolicy: "Always"
