deploy/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
#  namespace: prod
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: external
    nodePort: 30901
  selector:
    app: grafana
  type: NodePort
