deploy/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  type: "LoadBalancer"
  ports:
  - port: 8086
    protocol: TCP
    targetPort: 8086
    name: external
  - port: 8083
    protocol: TCP
    targetPort: 8083
    name: admin
  selector:
    app: influxdb
