deploy/influxdb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: influxdb
spec:
  rules:
  - host: influxdb.vungle.io
    http:
      paths:
      - path: /
        backend:
          serviceName: influxdb 
          servicePort: 8086
